# dive-color-corrector

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  claude.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml
docs/: IMPROVEMENT_PLAN.md  PRODUCTION_PLAN.md  PROJECT_OVERVIEW.md  RUST_MIGRATION_PLAN.md
packaging/macos/: setup.py
packaging/pyinstaller/: spec.template
scripts/: bump_version.py  inspect_model.py
src/dive_color_corrector/: cli.py  logging.py
src/dive_color_corrector/core/: correction.py  exceptions.py  schemas.py
src/dive_color_corrector/core/color/: filter.py  hue.py
src/dive_color_corrector/core/models/: __init__.py  sesr.py
src/dive_color_corrector/core/processing/: image.py  video.py
src/dive_color_corrector/gui/: app.py
tests/: conftest.py
tests/integration/: test_image_correction.py  test_video_processing.py
tests/unit/: test_cli.py  test_exceptions.py  test_filter.py  test_hue.py  test_main.py  test_sesr.py
tests/utils/: compare_images.py  create_test_image.py
